--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-@@ -0,0 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,7 +70,7 @@
       <h4> from Toronto’s Regent Park Projects to Bermuda’s Biennale</h4>
 
     <article>
-      A little after high noon, Dany Pen and I tuck away to Maria’s Ristorante: Chancery Lane’s discreet, cobblestone meeting place for politicians and businessmen. We are neither. Cambodian, Canadian, “‘hood:” Ms. Pen is all of these things. She is full, red lips and a leopard skin sweater, huge gold hoops and fine art. Dany has taken a break from her job coordinating the National Gallery’s youth education program to talk with me about how she has come to be an expat, an immigrant, and an artist; how she c...(line truncated)...
+      A little after high noon, Dany Pen and I tuck away to Maria’s Ristorante: Chancery Lane’s discreet, cobblestone meeting place for politicians and businessmen. We are neither. Cambodian, Canadian, “‘hood:” Ms. Pen is all of these things. She is full, red lips and a leopard skin sweater, huge gold hoops and fine art. Dany has taken a break from her job coordinating the National Gallery’s youth education program to talk with me about how she has come to be an expat, an immigrant, and an artist; how she came to create art that through merges her personal histories of genocide, poverty, and displacement. Most importantly, I want to know how she came to love art and believe in its power to crack open the world. <br></br>
 
       Meet Dany Pen: artist. Meet the stark, photographic installations of her family and other Cambodian Khmer Rouge survivors that won her a place in Bermuda’s 2012 Biennale. Find out more about her childhood in Toronto’s Regent Park, and how and why she creates art that acts as umbilical cords to her community and family, art that thickens and pulses with empathy and relatedness, always questioning what it takes to maintain – or even achieve – a sense of self amidst disconnection.<br></br> 
   </article>
