Attempting to resolve jbtr img issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Zine cover page  -->
 
 <div class="jumbotron">
-  <img src="images/mensawinglogsepia.jpg" class="img-responsive" class="transbox" style="width:100%" alt="sepiahistoricalphotographofmensawingaloginadeforestatedforest">
+  <img src="images/mensawinglogsepia.jpg" class="img-responsive" class="transbox" style="width:100%" alt="sepia historical photograph of men sawing a log in a deforestated forest">
 </div>
 
 <!--<div class="transbox"> -->
