Removed brs, Add margins to Images
To fix problem of images collapsing in small viewports

--- a/index.html
+++ b/index.html
@@ -100,40 +100,39 @@
     <div class="col-sm-2"></div>
 
     <div class="col-sm-5">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" margin= alt="Image">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive bottom-margin" style="width:100%" margin= alt="Image">
     </div>
 
   </div>
-<br>
 
 <!--End Row 1-->
 <!--Start Row 2-->
   <div class="row"> 
     <div class="col-sm-5">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive bottom-margin" style="width:100%" alt="Image">
     </div>
 
     <div class="col-sm-2"></div>
 
     <div class="col-sm-5">
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive bottom-margin" style="width:100%" alt="Image">
     </div>
 
   </div>
 
-<br> <!--End Row 2-->
+<!--End Row 2-->
 <!--Start Row 3 -->
 
   <div class="row"> 
     <div class="col-sm-5"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive bottom-margin" style="width:100%" alt="Image">
            
     </div>
 
     <div class="col-sm-2"></div>
 
     <div class="col-sm-5"> 
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive bottom-margin" style="width:100%" alt="Image">
       <p></p>      
     </div>
   </div>
