--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-7"> 
-      <img src="images/gumbase.jpg" class="img-responsive" style="width:100% height:100%" alt="Image">
+      <img src="images/gumbaseedited.jpg" class="img-responsive" style="width:100% height:100%" alt="Image">
     </div>
 
     <div class="col-sm-1"></div>
