Jumbotrox Title Text
Gave it a shadow with blur and brown color and increased size

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <img src="images/Mensawinglogsepia.jpg" class="img-responsive" style="width:100%" alt="sepia historical photograph of men sawing a log in a deforestated forest">
 </div>
 
-  <div id="jbtext">
-     <p id="jbtext">re-wilding</p>
+  <div class="jbtoplevel">
+     <p class="jbtoplevel" id="jbtitle">re-<br>wilding</p>
      
   </div>
 
