--- a/featuredany.html
+++ b/featuredany.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <title>ftr: dany pen/BDA</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="features.css">
   <link href="https://fonts.googleapis.com/css?family=Codystar|Lato:400,700,900,900i|Lobster|Monoton|Open+Sans: 300, 400|Playfair+Display: 400,400i, 900, 900i|Roboto: 400, 400i, 500, 500i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+    <script src="javascript.js"></script>
 </head>
 
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" >
+  <div class="container">
+   <h2 id="tempnav">re-wilding</h2>
+</nav>
+ <div class="page-header">
+  <h1>JOURNALISM <small>Features</small></h1>
+</div>
+
+    <div class="sidebar-nav col-xs-2">
+        <div class="navbar role=navigation"></div>
+        <div class="navbar-header"></div>
+    </div> 
+
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">blog</a>  
+        <a href="#">shorts</a>
+        <a href="#">journalism</a>
+        <a href="#"><img src="images/noface.jpg" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
+    </div>
+    <p class="menu" onclick="openNav()">&#9776; menu</p> 
 
 <h3>Taking Dany Pen’s Pulse:</h3>  <h4> from Toronto’s Regent Park Projects to Bermuda’s Biennale</h4>
 <br>
 
-<div class=“container”>
+<!-- <div class=“container”>
+        <div class="row"> 
+            <div class="col-sm-4 pull-right"> -->
 <article>
 Friday April 20 – 4/20 – just before the rush of summer. The tourists, with their bright shirts, pale skin, and slow saunters have yet to dominate the sidewalk. On Front Street, purse-sized landscape paintings and tchotchkes tumble out of open shop doors. Lunchtime has the air of a rat race, and Front Street is its final lap.
 A little after high noon, Dany Pen and I tuck away to Maria’s Ristorante: Chancery Lane’s discreet, cobblestone meeting place for politicians and businessmen. We are neither. Cambodian, Canadian, “‘hood:” Ms. Pen is all of these things. She is full, red lips and a leopard skin sweater, huge gold hoops and fine art. Dany has taken a break from her job coordinating the National Gallery’s youth education program to talk with me about how she has come to be an expat, an immigrant, and an artist. How she came to create art that through merges her personal histories of genocide, poverty, and displacement. Most importantly, I want to know how she came to love art and believe in its power to crack open the world.<br></br>
 Meet Dany Pen: artist. Meet the stark, photographic installations of her family and other Cambodian Khmer Rouge survivors that won her a place in Bermuda’s 2012 Biennale. Find out more about her childhood in Toronto’s Regent Park, and how and why she creates art that acts as umbilical cords to her community and family, art that thickens and pulses with empathy and relatedness, always questioning what it takes to maintain – or even achieve – a sense of self amidst disconnection.<br></br>
 
-<a class="" role="button" data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
-  More...
-</a>
+<button type="button" class="btn btn-default" aria-label="Left Align" a class="" role="button" data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+  <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
+</button>
+<!--<a class="" role="button" data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1" button type="button" class="btn btn-default">More Please...</button>> -->
+  
 <div class="collapse" id="collapseExample1">
   <h5>How the Other Half Lives</h5>
 	From St. James to Jane and Finch, Dany describes her childhood as moving “from project to project.” Like many other marginalized people, the Government heavily regulated her young life. Canada’s largest social housing provider (and the second largest in North America), The Toronto Community Housing Corporation shuttled Dany and her illiterate, immigrant mother in and out of Canada’s most infamous social housing complexes. “Growing up with a single mother, my mother had to make due with where we were placed, in subsidized housing. So we were always moving, place to place.” Dany’s environments were from ideal. Jane and Finch has the distinction of having one of the largest concentrations of gangs, youth, single-parent families, refugees, immigrants and “low-income earners” anywhere in the country. St. James is not only one of Toronto’s 13 economically deprived neighborhoods, but is also Canada’s most densely populated neighborhood – and one of the most tightly packed populations in all of North America. “Eventually, we finally settled in Regent Park where we weren’t moved again.” <br></br> 
@@ -32,18 +60,25 @@ Meet Dany Pen: artist. Meet the stark, photographic installations of her family 
 	Originally built in 1948 as a “garden community” physically distanced from the city, Regent Park’s inaccessibility is now a symbol not for escape but isolation. Regent Park became a multi-ethnic ghetto where drugs, prostitution and murder proliferated. It is Canada’s oldest and largest social housing project where (until recently) over half its population was age 25 or younger and almost 70% lived below Canada’s low-income cut off rate. Average income for Regent Park residents was approximately half the average for other Torontians, resulting in a community facing multiple stressors relating to wealth, opportunities, and crime. “There was always this saying in Regent Park, ‘You don’t cross the street out of Regent Park because on the other side you don’t belong there.’ It was a physical mentality …because Regent Parkers never cross the street. We stayed in our communities because we were seen as outcasts.” She continues frankly, “Every single person I know from the projects dropped out at twelve. They’re either locked up, on welfare, on drugs, or missing.” Toronto’s revitalization project aimed to inject hope into the crumbling projects, moving tenants to temporary housing, tearing down substandard homes and replacing them with a mix of townhouse and condominiums. Some see these projects as urban renewal. Others – including Dany – see it as a thinly veiled gentrification project. Although the Toronto Community Housing Corporation promised to replace all 2,083 low-income units, Regent Park residents moved out of their life-long neighborhood – some with as little as days notice– feel that the government deserted them in new projects, making space for high rises and high-end retail – and, some note bitterly – higher-income residents.<br></br>
 	The ongoing drama of Regent Park’s former residents is always at the forefront of Dany’s social conscience. “Growing up in the projects you experience a lot of things…prostitution, robbery, drugs, violence, murders. In the projects, it was everyday, normal scenes, hearing gunshots everyday. It was literally growing up in an unjust system that made me aware of the hierarchies, the different tiers. I use art as an outlet to voice and project what I experienced from the other side of the street that usually the other side wouldn’t see.”<br></br>
 
-	<a class="" role="button" data-toggle="collapse" href="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+	<button type="button" class="btn btn-default" aria-label="Left Align" a class="" role="button" data-toggle="collapse" href="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+  <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
+</button>
+
+	<!--<a class="" role="button" data-toggle="collapse" href="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
   	More...
-	</a>
+	</a> -->
 	<div class="collapse" id="collapseExample2">
 		<h5>Crossing the Street</h5><br>
 		Dany returns to this metaphor of crossing the street to describe the acts of transgression and transcendence that allowed her to see life outside of the projects. It wasn’t without disappointment, and more than once Dany was rebuffed. After teaching herself the basics of operating a manual camera – one she’d bought, herself, at eight, by saving her lunch money for an entire school year – Dany felt that it was time to upgrade her skills. Later, she applied to two high schools: one across a bridge in a different neighborhood, and the second a “[prestigious] arts school” Dany had always admired. Both schools rejected her. At the first, students from outside of the neighborhood were not allowed to attend: a policy that kept disadvantaged people from accessing greater privilege (and has since been rescinded in the ten years since Dany applied). The second school required prerequisites and prior training in the arts. A “very confident child,” Dany recalls walking into the school, going into the office, and declaring that she wanted to attend. “The receptionist was like, ‘Well, do you have any private training, any background in the arts, any programs your parents enrolled in. I was like, ‘No, I have nothing.’ I was very blunt. [I said] my mom can’t afford to put me in any of these things.” Again, Dany was rejected. Initially, she was “devastated.” In time, however, she became friends with a girl from the school, who snuck her into the school’s dark room after hours to develop her film.<br></br>
 		Dany finally got her chance to “step across the street” when she fell in with a generous group of artists working in the projects. In her daily journeys to and from school, she became intrigued by an underground basement, visible to the street through small windows through which a modern wunderkammer caught her eye. One day, as Dany was walking along, she noticed that the window to this wonder-room was ajar. Without hesitation, Dany slipped in. There, she encountered a “bizarre and intriguing” array of “hundreds of weird objects,” a strange collection of meticulously arranged junk. She had, of course, fallen into the art studio of a young collective of artists, who eventually started an out-of-pocket program that took Dany and other neighborhood kids out of the ghetto and into the downtown Toronto art scene. “The artists got very involved with us as the youth coming through their space. Because of those artists, for the first time in my life I crossed the street into downtown Toronto where I had never really been on my own. I was thrown into the art gallery for that first time experience, and it was a Keith Haring exhibition.”
 		At eight years old, Dany encountered the artworks of one of the best-known artists of the twentieth century. The pop artist and social activist drew his inspiration from graffiti, anti-apartheid struggles, AIDS awareness, and the 1980/1990s crack epidemic. Openly gay and later AIDS-infected, Haring made colorful, cartoonish works that were striking in their raw simplicity and feeling. To see a contemporary artist make work based on their life experience was highly influential to Dany. The effect was sudden – and game changing. “I literally died on the spot and was reborn. The most intimate moment of being in that exhibition was that (Haring) had a journal on display, a personal journal…There was this passage where he was talking about his sexuality and being an outcast, sleeping and living in the subway tunnels. He said he didn’t care, he feels comfortable in his own skin. [That] he’s always going to create what he feels. It gave me the confidence to say, hey, it doesn’t matter that I’m from Regent Park, seen as a statistic. It made me tell myself, ‘I can totally finish school, can totally get out of the projects.” It gave her the confidence to begin creating honest, personal, socially engaged art.<br></br>
 
-		<a class="" role="button" data-toggle="collapse" href="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
-  		More...
-		</a>
+		<button type="button" class="btn btn-default" aria-label="Left Align" a class="" role="button" data-toggle="collapse" href="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
+  <span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>
+</button>
+		<!--<a class="" role="button" data-toggle="collapse" href="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3"> 
+  		
+		</a> -->
 		<div class="collapse" id="collapseExample3">
 			<h5>Getting to the Other Side</h5>
 			<br>
@@ -54,14 +89,16 @@ Meet Dany Pen: artist. Meet the stark, photographic installations of her family 
 		</div>
 	</div>
 </div>
-
+</div>
+        </div>
+  </div>
 
 </article>
 
 </div>
 
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
+<!-- TO DO <a href="#" class="fa fa-facebook"></a>
+<a href="#" class="fa fa-twitter"></a> -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
