Tried to fix noface image link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#">blog</a>  
         <a href="#">shorts</a>
         <a href="#">journalism</a>
-        <a href="#"><img src="images/noface.jpg" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
+        <a href="#"><img src="images/noface.JPG" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
     </div>
     <p class="menu" onclick="openNav()">&#9776; menu</p>
 
