--- a/featuredany.html
+++ b/featuredany.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ftr: dany pen/BDA</title>
+  <title>Journalism > Arts & Culture > Bermuda > Dany Pen in Bermuda Biennale</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
 
 
 <div class="jumbotron img-responsive">
-        <img src="images/survivors.jpg" class="img-responsive" style="width:100%">
+        <img src="survivors.jpg" class="img-responsive" style="width:100%">
 </div>
 
 <h3>Taking Dany Pen’s Pulse:</h3>  
