--- a/featuredany.html
+++ b/featuredany.html
@@ -41,7 +41,7 @@
 
 
 <div class="jumbotron img-responsive">
-        <img src="survivors.jpg" class="img-responsive" style="width:100%">
+        <img src=""images/survivors.jpg" class="img-responsive" style="width:100%">
 </div>
 
 <h3>Taking Dany Pen’s Pulse:</h3>  
