--- a/featuredany.html
+++ b/featuredany.html
@@ -27,7 +27,7 @@
         <a href="#">blog</a> 
         <a href="#">shorts</a>
         <a href="#">journalism</a>
-        <a href="#"><img src="images/noface.jpg" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
+        <a href="#"><img src="images/noface.JPG" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
     </div>
     <p class="menu" onclick="openNav()">&#9776; menu</p> 
 </nav>
@@ -41,7 +41,7 @@
 
 
 <div class="jumbotron img-responsive">
-        <img src=""images/survivors.jpg" class="img-responsive" style="width:100%">
+        <img src=""images/survivors.JPG" class="img-responsive" style="width:100%">
 </div>
 
 <h3>Taking Dany Pen’s Pulse:</h3>  
