--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#">blog</a>  
         <a href="#">shorts</a>
         <a href="#">journalism</a>
-        <a href="#"><img src="images/noface.JPG" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
+        <a href="#"><img src="images/noface.jpg" class="img-circle" class="img-responsive" style="width:13%" alt="Author's Image"> about</a>
     </div>
     <p class="menu" onclick="openNav()">&#9776; menu</p>
 
@@ -65,7 +65,7 @@
             </div>
             <div class="col-sm-2"></div>
             <div class="col-sm-5">
-                <h1 class="blogsubtitle"><a href="reading.html">READING</a></h1>
+                <h1 class="blogsubtitle"><a class="linkclass2"href="reading.html">READING</a></h1>
                 <article> I grew up under the awning of my mother's literary sensibility. In our house, bookshelves sagged, exhausted from holding up collections of poetry and English classics, psychology texts, dictionaries and encyclopedias.  Despite (+ because of!) the technological zeitgeist, I continue to read:
                     <ul class="a">
                       <li>for communion with wise, sentient thinkers across time, space, + ideological borders</li> 
@@ -76,36 +76,35 @@
                 </article>
             </div>
 
-    <!--</div> -->
+    </div>
 
 <!--End Row 1--><!--Start Row 2-->
       <div class="row"> 
           <div class="col-sm-5">
-              <h1 class="blogsubtitle"><a href="law.html">LAW & LAW SCHOOL</a></h1><br>
+              <h1 class="blogsubtitle"><a class="linkclass2" href="law.html">LAW & LAW SCHOOL</a></h1><br>
               <article>The trials, tribulations and, perhaps, the occasional triumph; and, occasionally,  thoughts about the law :)     
               </article>
           </div>
           <div class="col-sm-2"></div>
           <div class="col-sm-5">
-              <h1 class="blogsubtitle"><a href="languages.html">LANGUAGES</a></h1><br>
-              <article> When it comes to languages, my eyes are, as they say, bigger than my stomach. Or  
-                        perhaps, in this case, my brain.  I have a long list of languages I'd like to learn to various degrees of proficiency, but you can <a href="languages.html">follow my (lamentable) progress</a> learning Czech and Spanish.  
+              <h1 class="blogsubtitle"><a href="languages.html" class="linkclass2" >LANGUAGES</a></h1><br>
+              <article> When it comes to languages, my eyes are, as they say, bigger than my stomach. Or perhaps, in this case, my brain.  I have a long list of languages I'd like to learn to various degrees of proficiency, but you can <a href="languages.html">follow my (lamentable) progress</a> learning Czech and Spanish.  
               </article>
           </div>
       </div>
-
+        
 <!--End Row 2--><!--Start Row 3 -->
 
       <div class="row"> 
           <div class="col-sm-5"> 
-              <h1 class="blogsubtitle"><a href="wellbeing.html">LEARNING</a></h1><br>
+              <h1 class="blogsubtitle"><a href="learning.html" class="linkclass2">LEARNING</a></h1><br>
               <article> My mother's first career was as a mental health nurse; later she became the 
                 Director of the National Drug Commission.  Some of my earlier memories are of her studies, and the heavy tomes on psychology and cognitive science scattered about the apartment. I was still in elementary school when, amidst Luft and Ingham and Abraham Malsow, I encountered my first favorite word...self-actualization.  This concept became a lighthouse.  In pursuit of this ideal, I think + read a lot about education: autodidactism, informal + formal, holistic + academic. <a href="learning.html">Stray thoughts here.</a>
               </article><br>       
           </div>
               <div class="col-sm-2"></div>
               <div class="col-sm-5">
-                  <h1 class="blogsubtitle"><a href="law.html">WELL-BEING</h1></a><br>
+                  <h1 class="blogsubtitle"><a href="wellbeing.html" class="linkclass2">WELL-BEING</h1></a><br>
                   <article>YTT 200 Certified Yoga Teacher, trained under the incredible Michael Watson. From time to time, I'll share <a href="wellbeing.html">my yoga sequences and reflections</a> on my yoga & general somatic practice.
                   </article>   
               </div>
